--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WebService::NetSuite.
 
+0.06 2017-08-31
+    - Added support for automatic discovery of datacenter urls
+
 0.05 2017-08-24
     - Removed passport authentication header in map_sso function.
       Multiple authentication methods have been deprecated since NetSuite Release 2017.1 according to NetSuite support.
